-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Otherwise, clients may get evicted if failover happens before update commit.
test_149() {
remount_client $MOUNT
replay_barrier_nosync mds1
fail_nodf mds1
ls $MOUNT || error "ls failed"
}
run_test 149 "failover after client remount"
ends with
== recovery-small test 149: failover after client remount ============================================ 13:43:02 (1622025782) Stopping client new4 /mnt/lustre (opts:) Starting client: new4: -o user_xattr,flock new4@tcp:/lustre /mnt/lustre Replay barrier on lustre-MDT0000 Failing mds1 on new4 Stopping /mnt/lustre-mds1 (opts:) on new4 reboot facets: mds1 Failover mds1 to new4 mount facets: mds1 Starting mds1: -o localrecov /dev/mapper/mds1_flakey /mnt/lustre-mds1 Started lustre-MDT0000 ls: cannot access /mnt/lustre: Input/output error recovery-small test_149: @@@@@@ FAIL: ls failed