lustre/include/lustre_import.h
@@ -328,7 +328,8 @@ struct obd_import {
 				  /* grant shrink disabled */
 				  imp_grant_shrink_disabled:1,
 				  /* to supress LCONSOLE() at conn.restore */
-				  imp_was_idle:1;
+				  imp_was_idle:1,
+				  imp_no_cached_data:1;
 	u32			  imp_connect_op;
 	u32			  imp_idle_timeout;
 	u32			  imp_idle_debug;
